// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`10260.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type A = (
    /** @deprecated */
    () => void
);
type B = (
	/** @deprecated */
	new () => void
);
type C = (
	/** @deprecated */
	<T>() => void
);
type D = (
	/** @deprecated */
	new <T>() => void
);

type A2 = (
    /** comment */
    () => void
);
type B2 = (
	/** comment */
	new () => void
);
type C2 = (
	/** comment */
	<T>() => void
);
type D2 = (
	/** comment */
	new <T>() => void
);

=====================================output=====================================
type A =
  /** @deprecated */
  () => void;
type B =
  /** @deprecated */
  new () => void;
type C =
  /** @deprecated */
  <T>() => void;
type D =
  /** @deprecated */
  new <T>() => void;

type A2 =
  /** comment */
  () => void;
type B2 =
  /** comment */
  new () => void;
type C2 =
  /** comment */
  <T>() => void;
type D2 =
  /** comment */
  new <T>() => void;

================================================================================
`;

exports[`11662.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
foo<a>
  // TEST
  // 1
  // 2
  // 3
  // 4
  // 5
  \`x\`

=====================================output=====================================
foo<a>
// TEST
// 1
// 2
// 3
// 4
// 5
\`x\`;

================================================================================
`;

exports[`15707.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const {
  foo,
  // bar
  // baz
}: Foo = expr;

const {
  foo1,
  // bar
  foo2,
  // baz
}: Foo = expr;

const [
  foo,
  // bar
  // baz
]: Foo = expr;

const [
  foo1,
  // bar
  foo2,
  // baz
]: Foo = expr;

function method({
  foo,
  // bar = "bar",
  // bazz = "bazz",
}: Foo) {}

function method({
  foo1,
  // bar = "bar",
  foo2
  // bazz = "bazz",
}: Foo) {}

function method([
  foo,
  // bar = "bar",
  foo2
  // bazz = "bazz",
]: Foo) {}

const {
  // bar
  // baz
}: Foo = expr;

const [
  // bar
  // baz
]: Foo = expr;

=====================================output=====================================
const {
  foo,
  // bar
  // baz
}: Foo = expr;

const {
  foo1,
  // bar
  foo2,
  // baz
}: Foo = expr;

const [
  foo,
  // bar
  // baz
]: Foo = expr;

const [
  foo1,
  // bar
  foo2,
  // baz
]: Foo = expr;

function method({
  foo,
  // bar = "bar",
  // bazz = "bazz",
}: Foo) {}

function method({
  foo1,
  // bar = "bar",
  foo2,
  // bazz = "bazz",
}: Foo) {}

function method([
  foo,
  // bar = "bar",
  foo2,
  // bazz = "bazz",
]: Foo) {}

const {
  // bar
  // baz
}: Foo = expr;

const [
  // bar
  // baz
]: Foo = expr;

================================================================================
`;

exports[`16065.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  constructor(
    @decorator1
    // comment1
    readonly baz1: string,

    @decorator2
    // comment2
    private baz2: string,
  ) {}
}

=====================================output=====================================
class Foo {
  constructor(
    @decorator1
    // comment1
    readonly baz1: string,

    @decorator2
    // comment2
    private baz2: string,
  ) {}
}

================================================================================
`;

exports[`16065-2.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  // PropertyDefinition
  @decorator
  readonly /* comment */ propertyDefinition;

  // TSAbstractPropertyDefinition
  @decorator
  abstract /* comment */ abstractPropertyDefinition;

  // TSAbstractMethodDefinition
  @decorator
  abstract /* comment */ abstractMethodDefinition;

  // MethodDefinition
  @decorator
  private /* comment */ methodDefinition() {}

  // AccessorProperty
  @decorator
  accessor /* comment */ accessorProperty = 3;

  constructor(
    // TSParameterProperty
    @decorator
    readonly /* comment */ parameterProperty,
  ) {}
}

=====================================output=====================================
class Foo {
  // PropertyDefinition
  @decorator
  readonly /* comment */ propertyDefinition;

  // TSAbstractPropertyDefinition
  @decorator
  abstract /* comment */ abstractPropertyDefinition;

  // TSAbstractMethodDefinition
  @decorator
  abstract /* comment */ abstractMethodDefinition;

  // MethodDefinition
  @decorator
  private /* comment */ methodDefinition() {}

  // AccessorProperty
  @decorator
  accessor /* comment */ accessorProperty = 3;

  constructor(
    // TSParameterProperty
    @decorator
    readonly /* comment */ parameterProperty,
  ) {}
}

================================================================================
`;

exports[`16121.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export type IntersectionType =
  & FirstPart
  // Presence of comment makes this non-idempotent
  & {
    an: string,
    object: string,
    type: string,
  }


export type IntersectionType =
  & FirstPart
  // Comment Line 1
  // Comment Line 2
  & {
    an: string,
    object: string,
    type: string,
  }

export type IntersectionType =
  | FirstPart
  // Presence of comment is not a problem
  | {
      an: string;
      object: string;
      type: string;
    };

export type IntersectionType =
  | FirstPart
  // Comment Line 1
  // Comment Line 2
  | {
      an: string;
      object: string;
      type: string;
    };

=====================================output=====================================
export type IntersectionType = FirstPart &
  // Presence of comment makes this non-idempotent
  {
    an: string;
    object: string;
    type: string;
  };

export type IntersectionType = FirstPart &
  // Comment Line 1
  // Comment Line 2
  {
    an: string;
    object: string;
    type: string;
  };

export type IntersectionType =
  | FirstPart
  // Presence of comment is not a problem
  | {
      an: string;
      object: string;
      type: string;
    };

export type IntersectionType =
  | FirstPart
  // Comment Line 1
  // Comment Line 2
  | {
      an: string;
      object: string;
      type: string;
    };

================================================================================
`;

exports[`16207.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  constructor(
    @required
    // comment
    protected readonly myParam: string,
  ) {}
}

=====================================output=====================================
class Foo {
  constructor(
    @required
    // comment
    protected readonly myParam: string,
  ) {}
}

================================================================================
`;

exports[`16889.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class A {
  @decorator
  /**
   * The method description
   *
  */
  async method() {
  }

  @decorator/**
   * The method description
   *
  */
  async method() {
  }

  @decorator/**
   * The method description
   *
  */ async method() {
  }

  @decorator
  async /* comment */ method() {
  }

  @decorator /* comment */ async method() {
  }

  @decorator
  // line comment
  async method() {
  }

  @decorator // line comment
  async method() {
  }


  @decorator
   /* comment */
  public async method() {
  }

  @decorator
   /* comment */
  static async method() {
  }

  @decorator
   /* comment */
  protected async method() {
  }

  @decorator
   /* comment */
  protected async method() {
  }

  @decorator
   /* comment */
  * method() {}

  @decorator
  * /* comment */ method() {}

   /* comment */
  abstract method():void;

}


=====================================output=====================================
class A {
  @decorator
  /**
   * The method description
   *
   */
  async method() {}

  @decorator /**
   * The method description
   *
   */
  async method() {}

  @decorator /**
   * The method description
   *
   */
  async method() {}

  @decorator
  async /* comment */ method() {}

  @decorator /* comment */ async method() {}

  @decorator
  // line comment
  async method() {}

  @decorator // line comment
  async method() {}

  @decorator
  /* comment */
  public async method() {}

  @decorator
  /* comment */
  static async method() {}

  @decorator
  /* comment */
  protected async method() {}

  @decorator
  /* comment */
  protected async method() {}

  @decorator
  /* comment */
  *method() {}

  @decorator
  */* comment */ method() {}

  /* comment */
  abstract method(): void;
}

================================================================================
`;

exports[`abstract-class.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
abstract class AbstractRule {
    /**
     * @deprecated
     * Failures will be filtered based on \`tslint:disable\` comments by tslint.
     * This method now does nothing.
     */
    filterFailures() {}
}

=====================================output=====================================
abstract class AbstractRule {
  /**
   * @deprecated
   * Failures will be filtered based on \`tslint:disable\` comments by tslint.
   * This method now does nothing.
   */
  filterFailures() {}
}

================================================================================
`;

exports[`abstract-methods.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
abstract class AbstractFoo {
  abstract method1(/* comment */ arg: string);
  abstract method2(
    /* comment */
    arg: string
  );
  abstract method3(
    // comment
    arg: string
  );
}

=====================================output=====================================
abstract class AbstractFoo {
  abstract method1(/* comment */ arg: string);
  abstract method2(
    /* comment */
    arg: string,
  );
  abstract method3(
    // comment
    arg: string,
  );
}

================================================================================
`;

exports[`abstract-methods-2.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// #18478

abstract class AbstractBar {
  abstract method4(
    param1: number,
    // trailing line comment
  ): void;
  abstract method5(
    param1: number,
    /* trailing block comment */
  ): void;
  abstract method6(
    ...rest: number[]
    // trailing after rest
  ): void;
  abstract method7(
    { a }: { a: number },
    // trailing after object pattern
  ): void;
}

declare class DeclareCls {
  method(
    param1: number,
    // trailing line after last param
  ): void;
}

class Overload {
  method(
    param1: number,
    // trailing line on first overload
  ): void;
  method(param1: string): void;
  method(param1: number | string): void {}
}

=====================================output=====================================
// #18478

abstract class AbstractBar {
  abstract method4(
    param1: number,
    // trailing line comment
  ): void;
  abstract method5(
    param1: number,
    /* trailing block comment */
  ): void;
  abstract method6(
    ...rest: number[]
    // trailing after rest
  ): void;
  abstract method7(
    { a }: { a: number },
    // trailing after object pattern
  ): void;
}

declare class DeclareCls {
  method(
    param1: number,
    // trailing line after last param
  ): void;
}

class Overload {
  method(
    param1: number,
    // trailing line on first overload
  ): void;
  method(param1: string): void;
  method(param1: number | string): void {}
}

================================================================================
`;

exports[`after-jsx-generic.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let comp = (
  <>
    <Component<number> /* comment1 */></Component>
    <Component<number> foo /* comment2 */></Component>
    <Component<number> /* comment3 */ bar></Component>
    <Component<number> foo /* comment4 */ bar></Component>

    <Component<number>
      // comment5
    ></Component>
    <Component<number>
      foo
      // comment6
    ></Component>
    <Component<number>
      // comment7
      foo
    ></Component>
    <Component<number>
      foo
      // comment8
      bar
    ></Component>
  </>
);

=====================================output=====================================
let comp = (
  <>
    <Component<number> /* comment1 */></Component>
    <Component<number> foo /* comment2 */></Component>
    <Component<number> /* comment3 */ bar></Component>
    <Component<number> foo /* comment4 */ bar></Component>

    <Component<number>
    // comment5
    ></Component>
    <Component<number>
      foo
      // comment6
    ></Component>
    <Component<number>
      // comment7
      foo
    ></Component>
    <Component<number>
      foo
      // comment8
      bar
    ></Component>
  </>
);

================================================================================
`;

exports[`declare_function.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
declare function fn(
  currentRequest: {a: number},
  // TODO this is a very very very very long comment that makes it go > 80 columns
): number;

declare function /* foo */ f( /* baz */ a /* taz */) /* bar */;
=====================================output=====================================
declare function fn(
  currentRequest: { a: number },
  // TODO this is a very very very very long comment that makes it go > 80 columns
): number;

declare function /* foo */ f(/* baz */ a /* taz */); /* bar */

================================================================================
`;

exports[`interface.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
interface Foo {
  bar(
    currentRequest: {a: number},
    // TODO this is a very very very very long comment that makes it go > 80 columns
  ): number;

  (
    currentRequest: {a: number},
    // TODO this is a very very very very long comment that makes it go > 80 columns
  ): number;

  new (
    currentRequest: {a: number},
    // TODO this is a very very very very long comment that makes it go > 80 columns
  ): number;

  foo: {
    x(
      currentRequest: {a: number},
      // TODO this is a very very very very long comment that makes it go > 80 columns
    ): number;

    y: (
      currentRequest: {a: number},
      // TODO this is a very very very very long comment that makes it go > 80 columns
    ) => number;
  }
}

=====================================output=====================================
interface Foo {
  bar(
    currentRequest: { a: number },
    // TODO this is a very very very very long comment that makes it go > 80 columns
  ): number;

  (
    currentRequest: { a: number },
    // TODO this is a very very very very long comment that makes it go > 80 columns
  ): number;

  new (
    currentRequest: { a: number },
    // TODO this is a very very very very long comment that makes it go > 80 columns
  ): number;

  foo: {
    x(
      currentRequest: { a: number },
      // TODO this is a very very very very long comment that makes it go > 80 columns
    ): number;

    y: (
      currentRequest: { a: number },
      // TODO this is a very very very very long comment that makes it go > 80 columns
    ) => number;
  };
}

================================================================================
`;

exports[`issues.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// Adding a comment stops the pretty printing process and everything is
// squished in a single line afterward
export type BuckWebSocketMessage = {
  // Not actually from Buck - this is to let the receiver know that the socket is connected.
  type: 'SocketConnected',
} | {
  type: 'BuildProgressUpdated',
  progressValue: number,
} | {
  type: 'BuildFinished',
  exitCode: number,
} | {
  type: 'BuildStarted',
} | {
  type: 'ParseStarted',
} | {
  type: 'ParseFinished',
} | {
  type: 'RunStarted',
} | {
  type: 'RunComplete',
};

// Two extra levels of indentation because of the comment
export type AsyncExecuteOptions = child_process$execFileOpts & {
  // The contents to write to stdin.
  stdin?: string,
  dontLogInNuclide?: boolean,
};

=====================================output=====================================
// Adding a comment stops the pretty printing process and everything is
// squished in a single line afterward
export type BuckWebSocketMessage =
  | {
      // Not actually from Buck - this is to let the receiver know that the socket is connected.
      type: "SocketConnected";
    }
  | {
      type: "BuildProgressUpdated";
      progressValue: number;
    }
  | {
      type: "BuildFinished";
      exitCode: number;
    }
  | {
      type: "BuildStarted";
    }
  | {
      type: "ParseStarted";
    }
  | {
      type: "ParseFinished";
    }
  | {
      type: "RunStarted";
    }
  | {
      type: "RunComplete";
    };

// Two extra levels of indentation because of the comment
export type AsyncExecuteOptions = child_process$execFileOpts & {
  // The contents to write to stdin.
  stdin?: string;
  dontLogInNuclide?: boolean;
};

================================================================================
`;

exports[`jsx.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
var example1 = <div>
	https://test
</div>;

var example2 = <div>
	/*test*/
</div>;

=====================================output=====================================
var example1 = <div>https://test</div>;

var example2 = <div>/*test*/</div>;

================================================================================
`;

exports[`location.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
function x({
  x,
  y,
}: {
  // Hello world.
  x: string,
  // Yoyo.
  y: string,
}) {}

export interface ApplicationEventData {
  registerBroadcastReceiver(onReceiveCallback: (
    context: any /* android.content.Context */,
    intent: any /* android.content.Intent */
  ) => void): void;
}

export type WrappedFormUtils = {
  getFieldDecorator(id: string, options?: {
    /** 子节点的值的属性，如 Checkbox 的是 'checked' */
    valuePropName?: string;
    /** 子节点的初始值，类型、可选值均由子节点决定 */
    initialValue?: any;
    /** 收集子节点的值的时机 */
    trigger?: string;
    /** 可以把 onChange 的参数转化为控件的值，例如 DatePicker 可设为：(date, dateString) => dateString */
    getValueFromEvent?: (...args: any[]) => any;
    /** 校验子节点值的时机 */
    validateTrigger?: string | string[];
    /** 校验规则，参见 [async-validator](https://github.com/yiminghe/async-validator) */
    rules?: ValidationRule[];
    /** 是否和其他控件互斥，特别用于 Radio 单选控件 */
    exclusive?: boolean;
  }): (node: React.ReactNode) => React.ReactNode;
};

=====================================output=====================================
function x({
  x,
  y,
}: {
  // Hello world.
  x: string;
  // Yoyo.
  y: string;
}) {}

export interface ApplicationEventData {
  registerBroadcastReceiver(
    onReceiveCallback: (
      context: any /* android.content.Context */,
      intent: any /* android.content.Intent */,
    ) => void,
  ): void;
}

export type WrappedFormUtils = {
  getFieldDecorator(
    id: string,
    options?: {
      /** 子节点的值的属性，如 Checkbox 的是 'checked' */
      valuePropName?: string;
      /** 子节点的初始值，类型、可选值均由子节点决定 */
      initialValue?: any;
      /** 收集子节点的值的时机 */
      trigger?: string;
      /** 可以把 onChange 的参数转化为控件的值，例如 DatePicker 可设为：(date, dateString) => dateString */
      getValueFromEvent?: (...args: any[]) => any;
      /** 校验子节点值的时机 */
      validateTrigger?: string | string[];
      /** 校验规则，参见 [async-validator](https://github.com/yiminghe/async-validator) */
      rules?: ValidationRule[];
      /** 是否和其他控件互斥，特别用于 Radio 单选控件 */
      exclusive?: boolean;
    },
  ): (node: React.ReactNode) => React.ReactNode;
};

================================================================================
`;

exports[`mapped-types.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type A = {
  // commentA
  [a in A]: string;
}

type B = {
  /* commentB */ [b in B]: string
}

type C = {
  [/* commentC */ c in C]: string
}

type D = {
  [d /* commentD */ in D]: string
}

type E = {
  [e in /* commentE */ E]: string
}

type F = {
  [f in F /* commentF */]: string
}

type G = {
  [g in G] /* commentG */: string
}

type H = { /* commentH */ [h in H]: string }

type I = { [/* commentI */ i in I]: string }

type J = { [j /* commentJ */ in J]: string }

type K = { [k in /* commentK */ K]: string }

type L = { [l in L /* commentL */]: string }

type M = { [m in M] /* commentG */: string }

// https://github.com/excalidraw/excalidraw/blob/712f2675195ace8d507f563ec4306efe319b3c84/packages/common/src/utility-types.ts#L61-L64
type MakeBrand<T extends string> = {
  /** @private using ~ to sort last in intellisense */
  [K in \`~brand~\${T}\`]: T;
};

type M1 = {
  /* 11 */ /* 12 */ [b in B]: string
}
type M2= {
  /* 21 */
  /* 22 */ [b in B]: string
}
type M3= {
  /* 23 */ /* 24 */
  [b in B]: string
}

type M4  = {
  /* a long long long long long long long long long long long long long long comment */ [b in B]: string
}

type M5  = {
  /* Multi
line */ [b in B]: string
}

type M6  = {
  /* 61 */ [b in long_long_long_long_long_long_type|long_long_long_long_long_long_type|long_long_long_long_long_long_type]: string
}

type M7  = {
  /* 71 */ [b in X]: long_long_long_long_long_long_type|long_long_long_long_long_long_type|long_long_long_long_long_long_type
}

=====================================output=====================================
type A = {
  // commentA
  [a in A]: string;
};

type B = {
  /* commentB */ [b in B]: string;
};

type C = {
  [/* commentC */ c in C]: string;
};

type D = {
  [d /* commentD */ in D]: string;
};

type E = {
  [e in /* commentE */ E]: string;
};

type F = {
  [f in F /* commentF */]: string;
};

type G = {
  [g in G /* commentG */]: string;
};

type H = { /* commentH */ [h in H]: string };

type I = { [/* commentI */ i in I]: string };

type J = { [j /* commentJ */ in J]: string };

type K = { [k in /* commentK */ K]: string };

type L = { [l in L /* commentL */]: string };

type M = { [m in M /* commentG */]: string };

// https://github.com/excalidraw/excalidraw/blob/712f2675195ace8d507f563ec4306efe319b3c84/packages/common/src/utility-types.ts#L61-L64
type MakeBrand<T extends string> = {
  /** @private using ~ to sort last in intellisense */
  [K in \`~brand~\${T}\`]: T;
};

type M1 = {
  /* 11 */
  /* 12 */ [b in B]: string;
};
type M2 = {
  /* 21 */
  /* 22 */ [b in B]: string;
};
type M3 = {
  /* 23 */
  /* 24 */
  [b in B]: string;
};

type M4 = {
  /* a long long long long long long long long long long long long long long comment */
  [b in B]: string;
};

type M5 = {
  /* Multi
line */
  [b in B]: string;
};

type M6 = {
  /* 61 */ [
    b in
      | long_long_long_long_long_long_type
      | long_long_long_long_long_long_type
      | long_long_long_long_long_long_type
  ]: string;
};

type M7 = {
  /* 71 */ [b in X]:
    | long_long_long_long_long_long_type
    | long_long_long_long_long_long_type
    | long_long_long_long_long_long_type;
};

================================================================================
`;

exports[`method_types.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
interface foo1 {
  bar3/* foo */ (/* baz */) // bat
  bar/* foo */ ? /* bar */ (/* baz */) /* bat */;
  bar2/* foo */ (/* baz */) /* bat */
}

interface foo2 {
  bar/* foo */ ? /* bar */ (bar: /* baz */ string): /* bat */ string;
}

interface foo3 {
  /* foo */ (/* bar */): /* baz */ string;
}

interface foo4 {
  /* foo */ (bar: /* bar */ string): /* baz */ string;
}

interface foo5 {
  /* foo */ new /* bar */  (a: /* baz */ string): /* bat */ string
}

interface foo6 {
  /* foo */ new /* bar */ (/* baz */): /* bat */ string
}

type foo7 = /* foo */ (/* bar */) /* baz */ => void

type foo8 = /* foo */ (a: /* bar */ string) /* baz */ => void

let foo9: new /* foo */ (/* bar */) /* baz */ => string;

let foo10: new /* foo */ (a: /* bar */ string) /* baz */ => string;

abstract class Test {
  abstract foo12 /* foo */ (a: /* bar */ string): /* baz */ void

  abstract foo13 /* foo */ (/* bar */) /* baz */
}

=====================================output=====================================
interface foo1 {
  bar3 /* foo */(/* baz */); // bat
  bar /* foo */ /* bar */?(/* baz */); /* bat */
  bar2 /* foo */(/* baz */); /* bat */
}

interface foo2 {
  bar /* foo */?(/* bar */ bar: /* baz */ string): /* bat */ string;
}

interface foo3 {
  /* foo */ (/* bar */): /* baz */ string;
}

interface foo4 {
  /* foo */ (bar: /* bar */ string): /* baz */ string;
}

interface foo5 {
  /* foo */ new (/* bar */ a: /* baz */ string): /* bat */ string;
}

interface foo6 {
  /* foo */ new (/* baz */) /* bar */ : /* bat */ string;
}

type foo7 = /* foo */ (/* bar */) /* baz */ => void;

type foo8 = /* foo */ (a: /* bar */ string) /* baz */ => void;

let foo9: new (/* bar */) /* foo */ /* baz */ => string;

let foo10: new (/* foo */ a: /* bar */ string) /* baz */ => string;

abstract class Test {
  abstract foo12 /* foo */(a: /* bar */ string): /* baz */ void;

  abstract foo13 /* foo */(/* bar */); /* baz */
}

================================================================================
`;

exports[`methods.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export class Point {
/**
 * Does something.
 */
  foo() {}

    /**
     * Does something else.
     */
  bar() {}

                /**
                 * Does
                 * something
                 * much
                 * better
                 * than
                 * the
                 * rest.
                 */
  baz() {}

      /**
       * Buzz-Fizz.
       * Note: This is indented too far.
       */
      fizzBuzz() {}

      /**
       * Turns the given string into pig-latin.
       */
              pigLatinize(value: string) {
/**
 * This is a block comment inside of a method.
 */
              }

  /**
        * One
 * Two
   * Three
* Four 
   */
  mismatchedIndentation() {}

  inline /* foo*/ (/* bar */) /* baz */ {}

  noBody(/* comment */ arg);
}

=====================================output=====================================
export class Point {
  /**
   * Does something.
   */
  foo() {}

  /**
   * Does something else.
   */
  bar() {}

  /**
   * Does
   * something
   * much
   * better
   * than
   * the
   * rest.
   */
  baz() {}

  /**
   * Buzz-Fizz.
   * Note: This is indented too far.
   */
  fizzBuzz() {}

  /**
   * Turns the given string into pig-latin.
   */
  pigLatinize(value: string) {
    /**
     * This is a block comment inside of a method.
     */
  }

  /**
   * One
   * Two
   * Three
   * Four
   */
  mismatchedIndentation() {}

  inline /* foo*/(/* bar */) /* baz */ {}

  noBody(/* comment */ arg);
}

================================================================================
`;

exports[`ts-parameter-proerty.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class A {
  constructor(
      private readonly paramProp: Type,
    // comment
  ) {
  }
}

=====================================output=====================================
class A {
  constructor(
    private readonly paramProp: Type,
    // comment
  ) {}
}

================================================================================
`;

exports[`type-literals.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type Props1 = // (DispatchProps & StateProps); WHY DON'T YOU WORK FLOW!!!!!!!!!
{
  isPlaying: boolean,
};

type Props2 = { // (DispatchProps & StateProps); WHY DON'T YOU WORK FLOW!!!!!!!!!
  isPlaying: boolean
};

type Props3 = {
  // (DispatchProps & StateProps); WHY DON'T YOU WORK FLOW!!!!!!!!!
  isPlaying: boolean
};

=====================================output=====================================
type Props1 =
  // (DispatchProps & StateProps); WHY DON'T YOU WORK FLOW!!!!!!!!!
  {
    isPlaying: boolean;
  };

type Props2 = {
  // (DispatchProps & StateProps); WHY DON'T YOU WORK FLOW!!!!!!!!!
  isPlaying: boolean;
};

type Props3 = {
  // (DispatchProps & StateProps); WHY DON'T YOU WORK FLOW!!!!!!!!!
  isPlaying: boolean;
};

================================================================================
`;

exports[`type-parameters.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
functionName<A /* A comment */>();

functionName<
  A // comment
>();
interface Foo {
 <
  A// comment
 >(arg): any;
}

=====================================output=====================================
functionName<A /* A comment */>();

functionName<
  A // comment
>();
interface Foo {
  <
    A, // comment
  >(
    arg,
  ): any;
}

================================================================================
`;

exports[`types.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(() => {
  // swallow error and fallback to using directory as path
}) as string[];

=====================================output=====================================
(() => {
  // swallow error and fallback to using directory as path
}) as string[];

================================================================================
`;

exports[`union.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
type UploadState<E, EM, D>
  // The upload hasnt begun yet
  = {type: "Not_begun"}
  // The upload timed out
  | {type: "Timed_out"}
  // Failed somewhere on the line
  | {type: "Failed", error: E, errorMsg: EM}
  // Uploading to aws3 and CreatePostMutation succeeded
  | {type: "Success", data: D};

type UploadState2<E, EM, D>
  // The upload hasnt begun yet
  = A
  // The upload timed out
  | B
  // Failed somewhere on the line
  | C
  // Uploading to aws3 and CreatePostMutation succeeded
  | D;

=====================================output=====================================
type UploadState<E, EM, D> =
  // The upload hasnt begun yet
  | { type: "Not_begun" }
  // The upload timed out
  | { type: "Timed_out" }
  // Failed somewhere on the line
  | { type: "Failed"; error: E; errorMsg: EM }
  // Uploading to aws3 and CreatePostMutation succeeded
  | { type: "Success"; data: D };

type UploadState2<E, EM, D> =
  // The upload hasnt begun yet
  | A
  // The upload timed out
  | B
  // Failed somewhere on the line
  | C
  // Uploading to aws3 and CreatePostMutation succeeded
  | D;

================================================================================
`;
